--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,17 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e1cdb5"
-    tools:context=".infra.gui.SplashScreen">
-
+    android:background="#cecece"
+    tools:context=".usuario.gui.MainActivity">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="387dp"
         android:layout_height="142dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.637"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
@@ -37,7 +36,7 @@
         android:layout_width="115dp"
         android:layout_height="43dp"
         android:layout_marginTop="452dp"
-        android:background="#a00c0c"
+        android:background="#AF0D25"
         android:shadowColor="#00719E7F"
         android:text="Cadastre-se"
         android:textColor="#FFFFFF"
@@ -51,7 +50,7 @@
         android:layout_height="44dp"
         android:layout_centerVertical="true"
         android:layout_marginTop="356dp"
-        android:background="#a00c0c"
+        android:background="#AF0D25"
         android:text="Entrar"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
@@ -63,7 +62,11 @@
         android:id="@+id/caixatxtEmailLogin"
         android:layout_width="242dp"
         android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_marginTop="216dp"
+        android:layout_marginEnd="79dp"
+        android:layout_marginRight="79dp"
         android:background="@drawable/caixaredonda"
         android:ems="10"
         android:hint="Digite o seu e-mail"
